move to postgres

--- a/api/.env.test
+++ b/api/.env.test
@@ -1,6 +1,14 @@
+
+POSTGRES_PASSWORD=dabih
+POSTGRES_USER=dabih
+POSTGRES_DB=tests
+DB_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@localhost:15432/$POSTGRES_DB
+
 LOG_LEVEL=critical
-DB_URL=file:$TMPDIR/dabih.sqlite
-STORAGE_URL=fs:$TMPDIR/dabih
+
+TEST_FOLDER=data/__test__
+STORAGE_URL=fs:$TEST_FOLDER
+
 TOKEN_SECRET=token_secret_for_unit_tests
 EPHEMERAL_URL=memory
 EPHEMERAL_SECRET=ephemeral_secret_for_unit_tests
