--- a/api/.env.dev
+++ b/api/.env.dev
@@ -1,6 +1,10 @@
+POSTGRES_PASSWORD=dabih
+POSTGRES_USER=dabih
+POSTGRES_DB=dabih
+DB_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@localhost:5432/$POSTGRES_DB
+
 PORT=3001
 LOG_LEVEL=debug
-DB_URL=file:../data/dabih.sqlite
 STORAGE_URL=fs:./data
 TOKEN_SECRET=token_secret_for_development_environment
 EPHEMERAL_URL=memory
