--- a/api/package.json
+++ b/api/package.json
@@ -9,17 +9,17 @@
     "build:docs": "redocly build-docs -o ./build/index.html ./build/spec.json",
     "build:client": "node --import tsx/esm src/client.ts",
     "build": "npm run build:tsoa && npm run build:docs && npm run build:client",
-    "dev:startdb": "docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:16-alpine",
+    "dev:startdb": "docker start pg-dabih || docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:16-alpine",
     "dev:stopdb": "docker stop pg-dabih && docker rm pg-dabih",
     "dev:start": "dotenv -e .env.dev -- node --import tsx/esm src/server.ts",
-    "dev": "npm run build && npm run dev:start",
+    "dev": "npm run build && npm run dev:startdb && npm run dev:start",
     "dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "test:startdb": "docker run -d --name pg-dabih-test -p 15432:5432 --env-file .env.test postgres:16-alpine",
     "test:stopdb": "docker stop pg-dabih-test && docker rm pg-dabih-test",
     "test:clean": "source .env.test && rm -rf $TEST_FOLDER/*",
     "test:prepare": "dotenv -e .env.test prisma migrate deploy",
     "test:api": "dotenv -e .env.test ava --serial -- src/api/**/*.test.ts",
-    "test:e2e": "npm run test:clean && npm run test:startdb && sleep 3 && npm run test:prepare && npm run test:api && npm run test:stopdb",
+    "test:e2e": "npm run test:clean && npm run test:startdb && sleep 3 && npm run test:prepare && npm run test:api ; npm run test:stopdb",
     "test:unit": "dotenv -e .env.test ava \"src/lib/**/\""
   },
   "author": "Michael Huttner",
@@ -30,8 +30,8 @@
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "ava": "^6.1.2",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8.57.0",
@@ -42,7 +42,7 @@
     "prisma": "^5.12.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.6.0"
+    "typescript-eslint": "^7.7.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
