--- a/api/package.json
+++ b/api/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
+    "@fastify/busboy": "^2.1.1",
     "@keyv/memcache": "^1.4.1",
     "@keyv/redis": "^2.8.4",
     "@koa/router": "^12.0.1",
