--- a/next/.env
+++ b/next/.env
@@ -1,1 +1,9 @@
-PORT="3000"
+PORT=3000
+TOKEN_SECRET=token_secret_for_development_environment
+API_URL=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=nextauth_secret_for_development_environment
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+
+
+
