--- a/api/package.json
+++ b/api/package.json
@@ -24,19 +24,14 @@
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@types/eslint": "^8.56.9",
+    "@eslint/js": "^9.3.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
     "ava": "^6.1.2",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-plugin-import": "^2.29.1",
     "openapi-typescript": "^7.0.0-next.8",
     "prisma": "^5.12.1",
     "tsx": "^4.7.2",
@@ -52,7 +47,6 @@
     "@prisma/client": "^5.12.1",
     "@redocly/cli": "^1.11.0",
     "crc": "^4.3.2",
-    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
     "koa": "^2.15.3",
