--- a/next/.eslintrc.json
+++ b/next/.eslintrc.json
@@ -1,16 +1,26 @@
 {
   "extends": [
-    "airbnb",
-    "airbnb-typescript",
-    "airbnb/hooks",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended-type-checked",
+    "plugin:@typescript-eslint/stylistic-type-checked",
     "next/core-web-vitals"
   ],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "rules": {
-    "import/prefer-default-export": "off",
-    "react/require-default-props": "off"
-  }
+  "overrides": [
+    {
+      "files": [
+        "*.js"
+      ],
+      "extends": [
+        "plugin:@typescript-eslint/disable-type-checked"
+      ]
+    }
+  ]
 }
