--- a/api/package.json
+++ b/api/package.json
@@ -24,35 +24,35 @@
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
+    "@eslint/js": "^9.4.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
-    "@types/node": "^20.12.7",
-    "ava": "^6.1.2",
-    "dotenv-cli": "^7.4.1",
+    "@types/node": "^20.14.2",
+    "ava": "^6.1.3",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "openapi-typescript": "^7.0.0-next.8",
-    "prisma": "^5.12.1",
-    "tsx": "^4.7.2",
+    "openapi-typescript": "^7.0.0-rc.0",
+    "prisma": "^5.15.0",
+    "tsx": "^4.15.1",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.0"
+    "typescript-eslint": "^7.12.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
     "@fastify/busboy": "^2.1.1",
     "@keyv/memcache": "^1.4.1",
-    "@keyv/redis": "^2.8.4",
+    "@keyv/redis": "^2.8.5",
     "@koa/router": "^12.0.1",
-    "@prisma/client": "^5.12.1",
-    "@redocly/cli": "^1.11.0",
+    "@prisma/client": "^5.15.0",
+    "@redocly/cli": "^1.14.0",
     "crc": "^4.3.2",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
-    "openapi-fetch": "^0.9.3",
-    "tsoa": "^6.2.0",
+    "openapi-fetch": "^0.9.7",
+    "tsoa": "^6.3.0",
     "winston": "^3.13.0"
   },
   "ava": {
