--- a/next/.env
+++ b/next/.env
@@ -1,4 +1,5 @@
 API_URL=http://localhost:3001
+BASE_URL=http://localhost:3000
 TOKEN_SECRET=token_secret_for_development_environment
 AUTH_SECRET=nextauth_secret_for_development_environment
 
