--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
@@ -47,6 +48,7 @@
     "@prisma/client": "^5.15.0",
     "@redocly/cli": "^1.14.0",
     "crc": "^4.3.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
     "koa": "^2.15.3",
