--- a/next/package.json
+++ b/next/package.json
@@ -5,24 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next dev",
+    "client": "cp ../api/build/api.ts ../api/build/schema.d.ts ./lib/api/",
+    "start": "npm run client && next dev",
     "test": "ava",
     "prod": "NODE_ENV=production next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.3",
+    "@headlessui/react": "^2.0.4",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.3",
+    "@next/mdx": "^14.2.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mdx": "^2.0.13",
     "ava": "^6.1.3",
     "highlight.js": "^11.9.0",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.4.0",
     "ldapjs": "^3.0.7",
-    "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.18",
+    "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
+    "openapi-fetch": "^0.9.7",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.3",
     "react": "18.3.1",
@@ -32,30 +34,30 @@
     "react-to-print": "^2.15.1",
     "rehype-highlight": "^7.0.0",
     "remark-frontmatter": "^5.0.0",
-    "tsx": "^4.11.0"
+    "tsx": "^4.15.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/ldapjs": "^3.0.6",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "18.3.2",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
+    "@types/react": "18.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": "^14.2.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.4"
   },
   "ava": {
     "nodeArguments": [
