--- a/api/package.json
+++ b/api/package.json
@@ -24,20 +24,20 @@
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.5.0",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.9",
     "ava": "^6.1.3",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "openapi-typescript": "^7.0.0-rc.0",
-    "prisma": "^5.15.0",
-    "tsx": "^4.15.1",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.12.0"
+    "openapi-typescript": "^7.0.0",
+    "prisma": "^5.16.0",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
@@ -45,16 +45,16 @@
     "@keyv/memcache": "^1.4.1",
     "@keyv/redis": "^2.8.5",
     "@koa/router": "^12.0.1",
-    "@prisma/client": "^5.15.0",
-    "@redocly/cli": "^1.14.0",
+    "@prisma/client": "^5.16.0",
+    "@redocly/cli": "^1.16.0",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
-    "openapi-fetch": "^0.9.7",
-    "tsoa": "^6.3.0",
+    "openapi-fetch": "^0.10.2",
+    "tsoa": "^6.3.1",
     "winston": "^3.13.0"
   },
   "ava": {
