--- a/api/package.json
+++ b/api/package.json
@@ -24,38 +24,40 @@
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.6.0",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "ava": "^6.1.3",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "openapi-typescript": "^7.0.0",
-    "prisma": "^5.16.0",
-    "tsx": "^4.15.7",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^7.14.1"
+    "openapi-typescript": "^7.0.2",
+    "prettier": "^3.3.2",
+    "prisma": "^5.16.2",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
-    "@fastify/busboy": "^2.1.1",
+    "@fastify/busboy": "^3.0.0",
     "@keyv/memcache": "^1.4.1",
     "@keyv/redis": "^2.8.5",
     "@koa/router": "^12.0.1",
-    "@prisma/client": "^5.16.0",
-    "@redocly/cli": "^1.16.0",
+    "@prisma/client": "^5.16.2",
+    "@redocly/cli": "^1.17.1",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
+    "node-schedule": "^2.1.1",
     "openapi-fetch": "^0.10.2",
     "tsoa": "^6.3.1",
-    "winston": "^3.13.0"
+    "winston": "^3.13.1"
   },
   "ava": {
     "nodeArguments": [
@@ -68,9 +70,13 @@
       "./**/*.test.ts"
     ]
   },
+  "prettier": {
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
   "imports": {
     "#lib/*": "./src/lib/*.ts",
-    "#util/*": "./src/lib/util/*.ts",
     "#crypto": "./src/lib/crypto/index.ts",
     "#ava": "./src/lib/ava.ts"
   }
