--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,8 @@
     "test:clean": "rm -rf ./data/__test__/",
     "test:prepare": "dotenv -e .env.test prisma migrate deploy",
     "test:api": "dotenv -e .env.test ava --serial",
-    "test": "npm run test:clean && npm run test:startdb && sleep 3 && npm run test:prepare && npm run test:api ; npm run test:stopdb"
+    "test": "npm run test:clean && npm run test:startdb && sleep 3 && npm run test:prepare && npm run test:api ; npm run test:stopdb",
+    "studio": "dotenv -e .env.dev prisma studio"
   },
   "author": "Michael Huttner",
   "license": "MIT",
