--- a/api/package.json
+++ b/api/package.json
@@ -11,52 +11,54 @@
     "build": "npm run build:tsoa && npm run build:docs && npm run build:client",
     "dev:startdb": "docker start pg-dabih || docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:16-alpine",
     "dev:stopdb": "docker stop pg-dabih && docker rm pg-dabih",
+    "dev:startredis": "docker start redis-dabih || docker run -d --name redis-dabih -p 6379:6379 redis:alpine",
+    "dev:stopredis": "docker stop redis-dabih && docker rm redis-dabih",
     "dev:start": "dotenv -e .env.dev -- node --import tsx/esm src/server.ts",
-    "dev": "npm run build && npm run dev:startdb && npm run dev:start",
+    "dev": "npm run build && npm run dev:startdb && npm run dev:startredis && npm run dev:start",
     "dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "test:startdb": "docker run -d --name pg-dabih-test -p 15432:5432 --env-file .env.test postgres:16-alpine",
     "test:stopdb": "docker stop pg-dabih-test && docker rm pg-dabih-test",
+    "test:startredis": "docker start redis-dabih-test || docker run -d --name redis-dabih-test -p 6380:6379 redis:alpine",
+    "test:stopredis": "docker stop redis-dabih-test && docker rm redis-dabih-test",
     "test:clean": "rm -rf ./data/__test__/",
     "test:prepare": "dotenv -e .env.test prisma migrate deploy",
     "test:api": "dotenv -e .env.test ava --serial",
-    "test": "npm run test:clean && npm run test:startdb && sleep 3 && npm run test:prepare && npm run test:api ; npm run test:stopdb",
+    "test": "npm run test:clean && npm run test:startdb && sleep 2 && npm run test:startredis && npm run test:prepare && npm run test:api ; npm run test:stopdb && npm run test:stopredis",
     "studio": "dotenv -e .env.dev prisma studio"
   },
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.10.0",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.5",
     "ava": "^6.1.3",
     "dotenv-cli": "^7.4.2",
-    "eslint": "^9.9.0",
-    "openapi-typescript": "^7.3.0",
+    "eslint": "^9.10.0",
+    "openapi-typescript": "^7.4.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.18.0",
-    "tsx": "^4.17.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "prisma": "^5.19.1",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
     "@fastify/busboy": "^3.0.0",
-    "@keyv/memcache": "^2.0.1",
-    "@keyv/redis": "^3.0.1",
-    "@koa/router": "^13.0.0",
-    "@prisma/client": "^5.18.0",
-    "@redocly/cli": "^1.21.0",
+    "@koa/router": "^13.0.1",
+    "@prisma/client": "^5.19.1",
+    "@redocly/cli": "^1.25.2",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "keyv": "^5.0.1",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "node-schedule": "^2.1.1",
-    "openapi-fetch": "^0.11.1",
+    "openapi-fetch": "^0.12.0",
+    "redis": "^4.7.0",
     "tsoa": "^6.4.0",
     "winston": "^3.14.2"
   },
