--- a/api/.env.dev
+++ b/api/.env.dev
@@ -2,6 +2,7 @@ POSTGRES_PASSWORD=dabih
 POSTGRES_USER=dabih
 POSTGRES_DB=dabih
 DB_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@localhost:5432/$POSTGRES_DB
+REDIS_URL=redis://localhost:6379
 
 PORT=3001
 LOG_LEVEL=debug
