--- a/api/package.json
+++ b/api/package.json
@@ -58,6 +58,7 @@
     "koa-body": "^6.0.1",
     "node-schedule": "^2.1.1",
     "openapi-fetch": "^0.12.2",
+    "piscina": "^4.7.0",
     "redis": "^4.7.0",
     "tsoa": "^6.5.1",
     "winston": "^3.15.0"
