--- a/next/package.json
+++ b/next/package.json
@@ -15,17 +15,18 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@headlessui/react": "^2.1.10",
+    "@eslint/js": "^9.13.0",
+    "@headlessui/react": "^2.2.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.0.1",
-    "ava": "^6.1.3",
+    "@next/mdx": "^15.0.2",
+    "ava": "^6.2.0",
     "highlight.js": "^11.10.0",
     "jose": "^5.9.6",
     "ldapjs": "^3.0.7",
-    "next": "15.0.1",
+    "next": "15.0.2",
     "next-auth": "^5.0.0-beta.20",
-    "openapi-fetch": "^0.12.2",
+    "openapi-fetch": "^0.13.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "18.3.1",
@@ -35,8 +36,9 @@
     "react-to-print": "^3.0.2",
     "rehype-highlight": "^7.0.1",
     "remark-frontmatter": "^5.0.0",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.2",
@@ -47,11 +49,11 @@
     "@types/mdx": "^2.0.13",
     "@types/qrcode": "^1.5.5",
     "@types/react": "18.3.12",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "^15.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
