tailwind pre update

--- a/next/package.json
+++ b/next/package.json
@@ -13,33 +13,34 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
-    "@eslint/js": "^9.18.0",
+    "@eslint/js": "^9.22.0",
     "@headlessui/react": "^2.2.0",
+    "@tailwindcss/postcss": "^4.0.12",
     "ava": "^6.2.0",
-    "jose": "^5.9.6",
-    "next": "15.1.5",
+    "jose": "^6.0.8",
+    "next": "15.2.1",
     "next-auth": "^5.0.0-beta.20",
     "openapi-fetch": "^0.13.4",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-dropzone": "^14.3.5",
+    "react-dropzone": "^14.3.8",
     "react-feather": "^2.0.10",
-    "react-to-print": "^3.0.4",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0",
+    "react-to-print": "^3.0.5",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "19.0.7",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.18.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17"
+    "@types/react": "19.0.10",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12"
   },
   "ava": {
     "nodeArguments": [
