--- a/next/package.json
+++ b/next/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/postcss": "^4.1.5",
     "ava": "^6.3.0",
     "jose": "^6.0.10",
+    "jszip": "^3.10.1",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.25",
     "openapi-fetch": "^0.13.7",
