--- a/api/.env.test
+++ b/api/.env.test
@@ -1,16 +1,13 @@
-
 POSTGRES_PASSWORD=dabih
 POSTGRES_USER=dabih
 POSTGRES_DB=tests
 DB_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@localhost:15432/$POSTGRES_DB
+REDIS_URL=redis://localhost:6380
 
 LOG_LEVEL=critical
 
 TEST_FOLDER=data/__test__
 STORAGE_URL=fs:$TEST_FOLDER
 
-TOKEN_SECRET=token_secret_for_unit_tests
-EMAIL_SECRET=email_secret_for_unit_tests
-EPHEMERAL_URL=memory
-EPHEMERAL_SECRET=ephemeral_secret_for_unit_tests
+SECRET=secret_for_unit_tests
 
