--- a/api/package.json
+++ b/api/package.json
@@ -9,12 +9,12 @@
     "build:docs": "redocly build-docs -o ./build/index.html ./build/spec.json",
     "build:client": "node --import tsx/esm src/client.ts",
     "build": "npm run build:tsoa && npm run build:docs && npm run build:client",
-    "dev:startdb": "docker start pg-dabih || docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:16-alpine",
+    "dev:startdb": "docker start pg-dabih || docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:17-alpine",
     "dev:stopdb": "docker stop pg-dabih && docker rm pg-dabih",
     "dev:startredis": "docker start redis-dabih || docker run -d --name redis-dabih -p 6379:6379 redis:alpine",
     "dev:stopredis": "docker stop redis-dabih && docker rm redis-dabih",
     "dev:start": "dotenv -e .env.dev -- node --import tsx/esm src/server.ts",
-    "dev": "npm run build && npm run dev:startdb && npm run dev:startredis && npm run dev:start",
+    "dev": "npm run build && npm run dev:startdb && sleep 1 && npm run dev:startredis && npm run dev:start",
     "dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "test:startdb": "docker run -d --name pg-dabih-test -p 15432:5432 --env-file .env.test postgres:16-alpine",
     "test:stopdb": "docker stop pg-dabih-test && docker rm pg-dabih-test",
@@ -23,7 +23,7 @@
     "test:clean": "rm -rf ./data/__test__/",
     "test:prepare": "dotenv -e .env.test prisma migrate deploy",
     "test:api": "dotenv -e .env.test ava --serial",
-    "test": "npm run test:clean && npm run test:startdb && sleep 2 && npm run test:startredis && npm run test:prepare && npm run test:api ; npm run test:stopdb && npm run test:stopredis",
+    "test": "npm run test:clean && npm run test:startdb && sleep 1 && npm run test:startredis && npm run test:prepare && npm run test:api ; npm run test:stopdb && npm run test:stopredis",
     "studio": "dotenv -e .env.dev prisma studio",
     "lint": "eslint ."
   },
@@ -36,7 +36,8 @@
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
     "@types/koa-static": "^4.0.4",
-    "@types/node": "^24.0.3",
+    "@types/ms": "^2.1.0",
+    "@types/node": "^24.0.4",
     "ava": "^6.4.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.29.0",
@@ -44,7 +45,7 @@
     "prisma": "^6.10.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript-eslint": "^8.35.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
@@ -59,7 +60,7 @@
     "koa-body": "^6.0.1",
     "koa-static": "^5.0.0",
     "openapi-fetch": "^0.14.0",
-    "piscina": "^5.1.1",
+    "piscina": "^5.1.2",
     "redis": "^5.5.6",
     "resend": "^4.6.0",
     "tsoa": "^6.6.0",
