--- a/vite/package.json
+++ b/vite/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@eslint/js": "^9.29.0",
     "@headlessui/react": "^2.2.4",
+    "jose": "^6.0.11",
     "jszip": "^3.10.1",
     "openapi-fetch": "^0.14.0",
     "qr-scanner": "^1.4.2",
@@ -31,16 +32,17 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "ava": "^6.4.0",
-    "tsx": "^4.20.3",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "tailwindcss": "^4.1.10",
+    "tsx": "^4.20.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5",
