--- a/api/.env.dev
+++ b/api/.env.dev
@@ -4,6 +4,7 @@ POSTGRES_DB=dabih
 DB_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@localhost:5432/$POSTGRES_DB
 REDIS_URL=redis://localhost:6379
 
+HOST=http://localhost:5173
 PORT=3001
 LOG_LEVEL=debug
 STORAGE_URL=fs:./data
