--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,9 @@
     "typecheck": "tsc --noEmit",
     "build:tsoa": "tsoa spec-and-routes --basePath /api/v1",
     "build:docs": "redocly build-docs -o ./dist/openapi.html ./build/spec.json",
+    "build:prisma": "prisma generate",
     "build:client": "node --import tsx/esm src/client.ts",
-    "build": "npm run build:tsoa && npm run build:docs && npm run build:client && npm run typecheck",
+    "build": "npm run build:tsoa && npm run build:docs && npm run build:client && npm run build:prisma && npm run typecheck && npm run compile",
     "dev:startdb": "docker start pg-dabih || docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:17-alpine",
     "dev:stopdb": "docker stop pg-dabih && docker rm pg-dabih",
     "dev:startredis": "docker start redis-dabih || docker run -d --name redis-dabih -p 6379:6379 redis:alpine",
@@ -40,14 +41,12 @@
     "@types/koa__router": "^12.0.4",
     "@types/koa-static": "^4.0.4",
     "@types/ms": "^2.1.0",
-    "@types/node": "^24.0.14",
+    "@types/node": "^24.0.15",
     "ava": "^6.4.1",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.31.0",
-    "openapi-typescript": "^7.8.0",
     "prisma": "^6.12.0",
     "tsup": "^8.5.0",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
   },
@@ -57,6 +56,8 @@
     "@koa/router": "^13.1.1",
     "@prisma/client": "^6.12.0",
     "@redocly/cli": "^1.34.4",
+    "tsx": "^4.20.3",
+    "openapi-typescript": "^7.8.0",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -66,7 +67,7 @@
     "openapi-fetch": "^0.14.0",
     "piscina": "^5.1.3",
     "redis": "^5.6.0",
-    "resend": "^4.6.0",
+    "resend": "^4.7.0",
     "tsoa": "^6.6.0",
     "winston": "^3.17.0"
   },
