--- a/api/package.json
+++ b/api/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "compile": "tsup src/server.ts --outDir build",
+    "compile": "tsup",
     "typecheck": "tsc --noEmit",
     "build:tsoa": "tsoa spec-and-routes --basePath /api/v1",
     "build:docs": "redocly build-docs -o ./dist/openapi.html ./build/spec.json",
     "build:prisma": "prisma generate",
     "build:client": "node --import tsx/esm src/client.ts",
-    "build": "npm run build:tsoa && npm run build:docs && npm run build:client && npm run build:prisma && npm run typecheck && npm run compile",
+    "build:dev": "npm run build:tsoa && npm run build:docs && npm run build:client",
+    "build": "npm run build:dev && npm run build:prisma && npm run typecheck && npm run compile",
     "dev:startdb": "docker start pg-dabih || docker run -d --name pg-dabih -p 5432:5432 -v \"./data/postgres:/var/lib/postgresql/data\"  --env-file .env.dev postgres:17-alpine",
     "dev:stopdb": "docker stop pg-dabih && docker rm pg-dabih",
     "dev:startredis": "docker start redis-dabih || docker run -d --name redis-dabih -p 6379:6379 redis:alpine",
     "dev:stopredis": "docker stop redis-dabih && docker rm redis-dabih",
     "dev:start": "dotenv -e .env.local -e .env.dev -- node --import tsx/esm src/server.ts",
-    "dev": "npm run build && npm run dev:startdb && sleep 1 && npm run dev:startredis && npm run dev:start",
+    "dev": "npm run build:dev && npm run dev:startdb && sleep 1 && npm run dev:startredis && npm run dev:start",
     "dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "test:startdb": "docker run -d --name pg-dabih-test -p 15432:5432 --env-file .env.test postgres:16-alpine",
     "test:stopdb": "docker stop pg-dabih-test && docker rm pg-dabih-test",
@@ -29,7 +30,7 @@
     "test": "npm run test:clean && npm run test:startdb && sleep 1 && npm run test:startredis && npm run test:prepare && npm run test:api ; npm run test:stopdb && npm run test:stopredis",
     "studio": "dotenv -e .env.dev prisma studio",
     "lint": "eslint .",
-    "start": "node build/app/src/server.js"
+    "start": "prisma migrate deploy && node server.js"
   },
   "author": "Michael Huttner",
   "license": "MIT",
