--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,7 +26,7 @@ services:
       retries: 5
 
   app:
-    image: thespanglab/dabih:v2.0.1
+    build: .
     container_name: dabih-app
     ports:
       - "3000:3000"
