--- a/api/package.json
+++ b/api/package.json
@@ -25,12 +25,16 @@
     "test:stopdb": "docker stop pg-dabih-test && docker rm pg-dabih-test",
     "test:startredis": "docker start redis-dabih-test || docker run -d --name redis-dabih-test -p 6380:6379 redis:alpine",
     "test:stopredis": "docker stop redis-dabih-test && docker rm redis-dabih-test",
+    "test:startsmb": "docker run -d --name smb-test -p 139:139 -p 445:445 dperson/samba -p -n -w 'WORKGROUP' -u 'testuser;testpass' -s 'share;/share;no;no;no;testuser'",
+    "test:stopsmb": "docker stop smb-test && docker rm smb-test",
     "test:clean": "rm -rf ./data/__test__/",
     "test:prepare": "dotenv -e .env.test prisma migrate deploy",
+    "test:init": "npm run test:clean && npm run test:startdb && sleep 1 && npm run test:startredis && npm run test:prepare",
+    "test:reset": "npm run test:stopdb && npm run test:stopredis",
     "test:api": "dotenv -e .env.test ava --serial",
     "test:crypto": "ava src/lib/crypto/crypto.test.ts --serial",
-    "test:smb": "ava src/lib/fs/smb.test.ts --serial",
-    "test": "npm run test:clean && npm run test:startdb && sleep 1 && npm run test:startredis && npm run test:prepare && npm run test:api ; npm run test:stopdb && npm run test:stopredis",
+    "test:smb": "npm run test:init && dotenv -e .env.smb.test ava src/lib/fs/smb.test.ts --serial || true && npm run test:reset",
+    "test": "npm run test:init && npm run test:api && npm run test:reset",
     "studio": "dotenv -e .env.dev prisma studio",
     "lint": "eslint .",
     "start": "prisma migrate deploy && node server.js"
@@ -56,11 +60,11 @@
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
-    "@awo00/smb2": "^1.1.1",
     "@fastify/busboy": "^3.1.1",
     "@koa/router": "^13.1.1",
     "@prisma/client": "^6.12.0",
     "@redocly/cli": "^2.0.1",
+    "@tryjsky/v9u-smb2": "^1.1.0",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
