revert smb support

--- a/api/.env.test
+++ b/api/.env.test
@@ -7,9 +7,7 @@ REDIS_URL=redis://localhost:6380
 LOG_LEVEL=critical
 
 TEST_FOLDER=data/__test__
-STORAGE_URL_=fs:$TEST_FOLDER
-
-STORAGE_URL=smb://testuser:testpass@localhost/share/
+STORAGE_URL=fs:$TEST_FOLDER
 
 SECRET=secret_for_unit_tests
 
