--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       retries: 5
 
   app:
-    image: thespanglab/dabih:v2.0.1
+    image: thespanglab/dabih:2.0.6
     container_name: dabih-app
     ports:
       - "3000:3000"
