--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,11 +33,14 @@ serde_yaml = "0.8"
 tokio = { version = "1.47", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
 reqwest = { version = "0.10", features = ["stream", "json"] }
 openapi = { path = "openapi" }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 rsa = "0.9.8"
 sha2 = "0.10.9"
 aes = "0.8.4"
 cbc = "0.1.2"
 thiserror = "2.0.16"
 base64ct = "1.8.0"
+clap = {version ="4.5.46", features = ["derive"]}
 
 
