--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -42,5 +42,7 @@ cbc = "0.1.2"
 thiserror = "2.0.16"
 base64ct = "1.8.0"
 clap = {version ="4.5.46", features = ["derive"]}
+glob = "0.3.3"
+pbr = "1.1.1"
 
 
