switch to koa bodyparser

--- a/api/package.json
+++ b/api/package.json
@@ -49,7 +49,7 @@
     "ava": "^6.4.1",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9.35.0",
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0"
@@ -57,14 +57,14 @@
   "dependencies": {
     "@ava/get-port": "^2.0.0",
     "@fastify/busboy": "^3.2.0",
+    "@koa/bodyparser": "^6.0.0",
     "@koa/router": "^14.0.0",
-    "@prisma/client": "^6.15.0",
-    "@redocly/cli": "^2.0.8",
+    "@prisma/client": "^6.16.1",
+    "@redocly/cli": "^2.1.0",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^3.0.1",
-    "koa-body": "^6.0.1",
     "koa-static": "^5.0.0",
     "openapi-fetch": "^0.14.0",
     "openapi-typescript": "^7.9.1",
