--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "compile": "tsup",
     "typecheck": "tsc --noEmit",
-    "build:tsoa": "tsoa spec-and-routes --basePath /api/v1 && npm run build:tsoa:fix",
+    "build:tsoa": "tsoa spec-and-routes --basePath /api/v1 && npm run build:tsoa:fix && npm run build:tsoa:fix2",
     "build:tsoa:fix": "jq 'walk(if type == \"object\" and .format? == \"bigint\" then .type = \"string\" else . end)' build/spec_tsoa.json > build/spec.json",
+    "build:tsoa:fix2": "sed -i '' $'1i\\\n// @ts-nocheck' build/routes.ts",
     "build:docs": "redocly build-docs -o ./dist/openapi.html ./build/spec.json",
     "build:prisma": "prisma generate",
     "build:client": "node --import tsx/esm src/client.ts",
@@ -39,29 +40,29 @@
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.36.0",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/koa": "^3.0.0",
     "@types/koa__router": "^12.0.4",
     "@types/koa-static": "^4.0.4",
     "@types/ms": "^2.1.0",
-    "@types/node": "^24.4.0",
+    "@types/node": "^24.5.2",
     "ava": "^6.4.1",
     "dotenv-cli": "^10.0.0",
-    "eslint": "^9.35.0",
-    "prisma": "^6.16.1",
+    "eslint": "^9.36.0",
+    "prisma": "^6.16.2",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0"
+    "typescript-eslint": "^8.44.1"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
     "@fastify/busboy": "^3.2.0",
     "@koa/bodyparser": "^6.0.0",
     "@koa/router": "^14.0.0",
-    "@prisma/client": "^6.16.1",
-    "@redocly/cli": "^2.1.2",
+    "@prisma/client": "^6.16.2",
+    "@redocly/cli": "^2.2.0",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -71,7 +72,7 @@
     "openapi-typescript": "^7.9.1",
     "piscina": "^5.1.3",
     "redis": "^5.8.2",
-    "resend": "^6.0.3",
+    "resend": "^6.1.0",
     "tsoa": "^6.6.0",
     "tsx": "^4.20.5",
     "winston": "^3.17.0"
