--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -9,7 +9,7 @@ jobs:
   create-release:
     permissions:
       contents: write
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       release_id: ${{ steps.create-release.outputs.result }}
 
@@ -18,7 +18,7 @@ jobs:
       - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 24
       - name: get version
         run: echo "PACKAGE_VERSION=$(node -p "require('./api/package.json').version")" >> $GITHUB_ENV
       - name: create release
