--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit",
     "build:tsoa": "tsoa spec-and-routes --basePath /api/v1 && npm run build:tsoa:fix && npm run build:tsoa:fix2",
     "build:tsoa:fix": "jq 'walk(if type == \"object\" and .format? == \"bigint\" then .type = \"string\" else . end)' build/spec_tsoa.json > build/spec.json",
-    "build:tsoa:fix2": "sed -i '' $'1i\\\n// @ts-nocheck' build/routes.ts",
+    "build:tsoa:fix2": "node --import tsx/esm build/fix_routes.ts",
     "build:docs": "redocly build-docs -o ./dist/openapi.html ./build/spec.json",
     "build:prisma": "prisma generate",
     "build:client": "node --import tsx/esm src/client.ts",
