--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*"
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   create-release:
     permissions:
@@ -14,13 +17,6 @@ jobs:
       release_id: ${{ steps.create-release.outputs.result }}
 
     steps:
-      - uses: actions/checkout@v4
-      - name: setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 24
-      - name: get version
-        run: echo "PACKAGE_VERSION=$(node -p "require('./api/package.json').version")" >> $GITHUB_ENV
       - name: create release
         env:
           TAG: ${{ github.ref }}
@@ -32,7 +28,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `${process.env.TAG}`,
-              name: `Dabih v${process.env.PACKAGE_VERSION}`,
+              name: `Dabih ${GITHUB_REF_NAME}`,
               body: 'Download dabih binaries here.',
               draft: true,
               prerelease: false
@@ -50,10 +46,14 @@ jobs:
               name: linux,
               target: x86_64-unknown-linux-gnu,
             }
-          - { runner: macos-latest, name: macos, target: x86_64-apple-darwin }
+          - { 
+              runner: macos-latest,
+              name: macos_x86,
+              target: x86_64-apple-darwin
+            }
           - {
               runner: macos-latest,
-              name: arm_macos,
+              name: macos,
               target: aarch64-apple-darwin,
             }
           - {
@@ -66,17 +66,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{matrix.os.target}}
-
-      - name: Use strawberry perl
-        if: matrix.os.runner == 'windows-latest'
-        run: echo OPENSSL_SRC_PERL=C:/Strawberry/perl/bin/perl >> $GITHUB_ENV
+        uses: actions/checkout@v4
 
       - name: Build CLI for ${{ matrix.os.target }}
         run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
@@ -99,7 +89,7 @@ jobs:
   publish-release:
     permissions:
       contents: write
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [create-release, build-cli]
 
     steps:
