--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -28,7 +28,7 @@ path = "src/main.rs"
 [dependencies]
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
-progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
+progenitor-client = "0.11.1"
 serde_json = "1.0"
 serde_yaml = "0.8"
 tokio = { version = "1.47", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
@@ -49,7 +49,7 @@ regress = "0.10.4"
 
 [build-dependencies]
 prettyplease = "0.2.22"
-progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
+progenitor = "0.11.1"
 openapiv3 = "2.2.0"
 chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1.0"
