--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -69,7 +69,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build CLI for ${{ matrix.os.target }}
-        run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
+        run: |
+          rustup target add ${{ matrix.os.target }}
+          cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
 
       - name: Archive and upload Artifact
         env:
