--- a/.github/workflows/publish_crate.yaml
+++ b/.github/workflows/publish_crate.yaml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-
+      - name: Copy spec
+        run: cp ./api/build/spec.json ./cli/spec.json
       - name: Cargo publish
         working-directory: ./cli
         run: cargo publish --token ${CRATES_TOKEN}
