--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -80,7 +80,8 @@ jobs:
         run: |
           cd cli
           if [[ "${{ matrix.os.name }}" == "windows" ]]; then
-            7z a -tzip dabih_cli_${{ matrix.os.name }}.zip -spf0 target/${{ matrix.os.target }}/release/dabih.exe
+            cd target/${{ matrix.os.target }}/release
+            7z a -tzip dabih_cli_${{ matrix.os.name }}.zip dabih.exe
             gh release upload  ${{ github.ref }} dabih_cli_${{ matrix.os.name }}.zip
           else
             tar czf dabih_cli_${{ matrix.os.name }}.tar.gz -C target/${{ matrix.os.target }}/release dabih
