add cat command

--- a/vite/package.json
+++ b/vite/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.2.7",
     "jose": "^6.1.0",
     "jszip": "^3.10.1",
+    "oidc-client-ts": "^3.3.0",
     "openapi-fetch": "^0.14.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
