--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -20,6 +20,7 @@ jobs:
       - name: create release
         env:
           TAG: ${{ github.ref }}
+          NAME: ${{ github.ref_name }}
         id: create-release
         uses: actions/github-script@v6
         with:
@@ -28,7 +29,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `${process.env.TAG}`,
-              name: `Dabih ${process.env.TAG}`,
+              name: `Dabih ${process.env.NAME}`,
               body: 'Download dabih binaries here.',
               draft: true,
               prerelease: false
@@ -70,6 +71,7 @@ jobs:
 
       - name: Build CLI for ${{ matrix.os.target }}
         run: |
+          cp api/build/spec.json cli/spec.json
           rustup target add ${{ matrix.os.target }}
           cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
 
