--- a/api/package.json
+++ b/api/package.json
@@ -41,42 +41,43 @@
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.37.0",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/koa": "^3.0.0",
     "@types/koa__router": "^12.0.4",
     "@types/koa-static": "^4.0.4",
     "@types/ms": "^2.1.0",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.7.0",
     "ava": "^6.4.1",
     "dotenv-cli": "^10.0.0",
-    "eslint": "^9.36.0",
-    "prisma": "^6.16.2",
+    "eslint": "^9.37.0",
+    "prisma": "^6.16.3",
     "tsup": "^8.5.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
     "@fastify/busboy": "^3.2.0",
     "@koa/bodyparser": "^6.0.0",
     "@koa/router": "^14.0.0",
-    "@prisma/client": "^6.16.2",
-    "@redocly/cli": "^2.2.0",
+    "@prisma/client": "^6.16.3",
+    "@redocly/cli": "^2.3.0",
     "crc": "^4.3.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^3.0.1",
     "koa-static": "^5.0.0",
-    "openapi-fetch": "^0.14.0",
+    "openapi-fetch": "^0.14.1",
     "openapi-typescript": "^7.9.1",
+    "openid-client": "^6.8.1",
     "piscina": "^5.1.3",
-    "redis": "^5.8.2",
-    "resend": "^6.1.0",
+    "redis": "^5.8.3",
+    "resend": "^6.1.2",
     "tsoa": "^6.6.0",
-    "tsx": "^4.20.5",
-    "winston": "^3.17.0"
+    "tsx": "^4.20.6",
+    "winston": "^3.18.3"
   },
   "ava": {
     "nodeArguments": [
